Fixed the colors on the Wishlist and Browse pages to have compliant contrast ratios

--- a/public/app.css
+++ b/public/app.css
@@ -43,7 +43,7 @@ a {
 
 .notes {
     font-style: italic;
-    color: #13d63f;
+    color: #3951b1;
 }
 
 .modal.show {
